# backend/src/controllers/userController.js
@@ -2,16 +2,23 @@ import users from '../models/User.js';
 
 class UserController {
 	static getAllUsers = (req, res) => {
+		/* #swagger.tags = ['User']*/
 		users.find((err, users) => {
 			if (err) {
 				res.status(500).send({ message: err.message });
 			} else {
+				/* #swagger.responses[200] = { 
+					schema: { $ref: "#/definitions/User" },
+					description: 'Usuário encontrado.' 
+        		} */
 				res.status(200).json(users);
 			}
 		});
 	};
 
 	static getUserById = (req, res) => {
+		/* #swagger.tags = ['User']*/
+
 		const id = req.params.id;
 
 		users.findById(id, (err, users) => {
@@ -20,13 +27,18 @@ class UserController {
 					message: `${err.message} - Id not found.`,
 				});
 			} else {
+				/* #swagger.responses[200] = { 
+               		schema: { $ref: "#/definitions/User" },
+        		} */
 				res.status(200).send(users);
 			}
 		});
 	};
 
 	static createUser = (req, res) => {
-		let user = new users(req.body.id, req.body.name, req.body.cpf, req.body.email, req.body.birthDate, req.body.phoneNumber, req.body.password, req.body.profilePhoto, req.body.balanceAccount);
+		/* #swagger.tags = ['User']*/
+
+		let user = new users(req.body);
 
 		user.save((err) => {
 			if (err) {
@@ -40,6 +52,7 @@ class UserController {
 	};
 
 	static updateUser = (req, res) => {
+		/* #swagger.tags = ['User']*/
 		const id = req.params.id;
 
 		users.findByIdAndUpdate(id, { $set: req.body }, (err) => {
@@ -53,6 +66,7 @@ class UserController {
 
 	// HOW SHOULD WE DELETE A USER?
 	static deleteUser = (req, res) => {
+		/* #swagger.tags = ['User']*/
 		const id = req.params.id;
 
 		users.findByIdAndDelete(id, (err) => {
