# backend/swagger_output.json
@@ -2,22 +2,40 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "Coworking Doc",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:3000",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "User",
+      "description": "User's endpoint"
+    }
+  ],
   "schemes": [
     "http"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/users": {
       "get": {
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Usuário encontrado.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -25,45 +43,11 @@
         }
       },
       "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "example": "any"
-                },
-                "name": {
-                  "example": "any"
-                },
-                "cpf": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "birthDate": {
-                  "example": "any"
-                },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "profilePhoto": {
-                  "example": "any"
-                },
-                "balanceAccount": {
-                  "example": "any"
-                }
-              }
-            }
-          }
+        "tags": [
+          "User"
         ],
+        "description": "",
+        "parameters": [],
         "responses": {
           "201": {
             "description": "Created"
@@ -76,6 +60,9 @@
     },
     "/users/{id}": {
       "get": {
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -87,7 +74,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           },
           "400": {
             "description": "Bad Request"
@@ -95,6 +85,9 @@
         }
       },
       "put": {
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -114,6 +107,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -132,6 +128,90 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "0293498asdfh384734ghfhk"
+        },
+        "name": {
+          "type": "string",
+          "example": "Manoel Gomes"
+        },
+        "cpf": {
+          "type": "string",
+          "example": "000.000.000-00"
+        },
+        "email": {
+          "type": "string",
+          "example": "manoelgomes@gmail.com"
+        },
+        "birthDate": {
+          "type": "string",
+          "example": "02/12/1969"
+        },
+        "phoneNumber": {
+          "type": "string",
+          "example": "(99)99999-9999"
+        },
+        "password": {
+          "type": "string",
+          "example": "canetaAzuuul"
+        },
+        "profilePhoto": {
+          "type": "string",
+          "example": "/users/profilePhotos/ícone-brasileiro-id:3128758325.jpg"
+        },
+        "balanceAccount": {
+          "type": "number",
+          "example": 0
+        }
+      }
+    },
+    "CreateUser": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Manoel Gomes"
+        },
+        "cpf": {
+          "type": "string",
+          "example": "000.000.000-00"
+        },
+        "email": {
+          "type": "string",
+          "example": "manoelgomes@gmail.com"
+        },
+        "birthDate": {
+          "type": "string",
+          "example": "02/12/1969"
+        },
+        "phoneNumber": {
+          "type": "string",
+          "example": "(99)99999-9999"
+        },
+        "password": {
+          "type": "string",
+          "example": "canetaAzuuul"
+        },
+        "profilePhoto": {
+          "type": "string",
+          "example": "/users/profilePhotos/ícone-brasileiro-id:3128758325.jpg"
+        }
+      },
+      "required": [
+        "name",
+        "cpf",
+        "email",
+        "birthDate",
+        "phoneNumber",
+        "password"
+      ]
     }
   }
 }
